--- a/Projeto_Deteccao_de_Objetos_YOLO.ipynb
+++ b/Projeto_Deteccao_de_Objetos_YOLO.ipynb
@@ -2,22 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6adb1872",
+   "id": "0e5e4fa2",
    "metadata": {},
    "source": [
     "<!-- Projeto Detecção de Objeto usando YOLO e Darknet  -->\n",
     "\n",
-    "YOLO\n",
+    "<!-- YOLO -->\n",
     "O YOLO (You Only Look Once) é um popular modelo de rede neural convolucional para detecção de objetos em imagens e vídeos em tempo real. Existem várias implementações do YOLO em Python disponíveis, sendo a mais conhecida a implementação oficial chamada \"YOLOv4\" (ou \"YOLOv5\" na versão mais recente). Essa implementação é mantida pela comunidade e pode ser encontrada no GitHub.\n",
     "\n",
-    "Darknet\n",
-    "O Darknet é um framework de código aberto escrito em C e CUDA para treinamento e inferência de modelos de detecção de objetos, incluindo versões do YOLO (You Only Look Once). Embora o Darknet seja escrito principalmente em C, ele também possui interfaces Python que permitem usar suas funcionalidades em Python."
+    "<!-- Darknet -->\n",
+    "O Darknet é um framework de código aberto escrito em C e CUDA para treinamento e inferência de modelos de detecção de objetos, incluindo versões do YOLO (You Only Look Once). Embora o Darknet seja escrito principalmente em C, ele também possui interfaces Python que permitem usar suas funcionalidades em Python.\n",
+    "\n",
+    "Iniciando o projeto"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b320660e",
+   "id": "5c3df489",
    "metadata": {},
    "outputs": [],
    "source": []
